Implement Config Loader

--- a/Curl/Curl.csproj
+++ b/Curl/Curl.csproj
@@ -9,4 +9,8 @@
         <RootNamespace>Curl</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="System.Text.Json" Version="9.0.0" />
+    </ItemGroup>
+
 </Project>
