--- a/Curl/Curl.csproj
+++ b/Curl/Curl.csproj
@@ -13,4 +13,8 @@
       <PackageReference Include="System.Text.Json" Version="9.0.0" />
     </ItemGroup>
 
+    <PropertyGroup>
+        <EnableJsonSourceGenerator>true</EnableJsonSourceGenerator>
+    </PropertyGroup>
+
 </Project>
